# 0diff

./: .0diff.toml.example  .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: agents.rs  config.rs  differ.rs  filter.rs  git.rs  history.rs  lib.rs  main.rs  output.rs  watcher.rs
