[package]
name = "zerodiff"
version = "0.2.0"
edition = "2024"
authors = ["Juste A. Gnimavo <juste@zerosuite.dev>", "Claude <noreply@anthropic.com>"]
description = "Real-time code modification tracking for the multi-agent era"
license = "MIT"
repository = "https://github.com/zerosuite-inc/0diff"
keywords = ["diff", "git", "agent", "tracking", "code-review"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "0diff"
path = "src/main.rs"

[dependencies]
notify = "8"
notify-debouncer-mini = "0.7"
similar = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
ctrlc = "3"

[dev-dependencies]
tempfile = "3.25.0"
